probo/engine.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: engine
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers: 
      - name: probo-engine
        image: pawanhfl/probo-engine:28de839
        imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: engine-service
spec:
  selector:
    app: engine
  type: ClusterIP
  ports:
  - port: 8005
    targetPort: 8081
