probo/server.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: server
spec:  
  replicas: 1
  selector:
    matchLabels:
      app: probo-server
  template: 
    metadata:
      labels:
        app: probo-server
    spec:
      containers: 
      - name: server
        image: pawanhfl/probo_server:c8c1e99
        imagePullPolicy: Always
        ports:
        - containerPort: 3000


---

apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: probo-server
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
