probo/ws.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: probo-ws
  template:
    metadata:
      labels:
        app: probo-ws
    spec: 
      containers: 
      - name: ws
        image: pawanhfl/probo_ws:28de839
        imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: ws-service
spec:
  selector:
    app: probo-ws
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
