probo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-apps-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - probo.itsarc.me
    secretName: probo-tls
  rules:
  - host: probo.itsarc.me
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 3000
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: ws-service
            port:
              number: 8080
